--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <link rel="stylesheet" href="mystyle.css">
-<title>Page Title</title>
+<title>fred.h</title>
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>fred.h: </h1>
+<p>Welcome to my header file. </p>
 
 </body>
 </html>
