--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<h1>fred.h: </h1>
-<p>Welcome to my header file. </p>
+<h1>fred.h</h1>
+<p>Welcome to my header file, if you'll pardon the slightly forced anology. This is a simple page designed to expose what I'm up to and what I've done across a variety of areas, primarily software development but also writing and art. </p>
 
 </body>
 </html>
