--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="mystyle.css">
-<title>fred.h</title>
-</head>
-<body>
-
-<h1>fred.h</h1>
-<p>Welcome to my header file, if you'll pardon the slightly forced anology. This is a simple page designed to expose what I'm up to and what I've done across a variety of areas, primarily software development but also writing and art. </p>
-
-</body>
+  <head>
+    <link rel="stylesheet" href="mystyle.css" />
+    <title>fred.h</title>
+  </head>
+  <body>
+    <h1>fred.h</h1>
+    <p>
+      Welcome to my header file, if you'll pardon the slightly forced anology.
+      This is a simple page designed to expose what I'm up to and what I've done
+      across a variety of areas, primarily software development but also writing
+      and art.
+    </p>
+    <h2>Quick Links</h2>
+    <p>GitHub Profile</p>
+  </body>
 </html>
