--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="mystyle.css" />
+
+    <script src="portfolio.js"></script>
     <title>fred.h</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <h1>fred.h</h1>
@@ -14,5 +23,56 @@
     </p>
     <h2>Quick Links</h2>
     <p>GitHub Profile</p>
+
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <div class="card" style="width: 19rem">
+            <img src="code2.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">GitHub Profile</h5>
+              <p class="card-text">
+                Explpore my projects, including archive of iOS app source code.
+              </p>
+              <a href="https://github.com/fred1778" class="btn btn-primary">Go!</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+                    <div class="card" style="width: 19rem">
+            <img src="wrds.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Medium Page</h5>
+              <p class="card-text">
+                Articles and stories
+              </p>
+              <a href="https://medium.com/@fredcgray" class="btn btn-primary">Go!</a>
+            </div>
+          </div>
+        </div>
+
+
+        </div>
+        <div class="col">
+
+                    <div class="card" style="width: 15rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">GitHub Profile</h5>
+              <p class="card-text">
+                Explpore my projects, including archive of iOS app source code.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
