more header and more info added

--- a/index.html
+++ b/index.html
@@ -14,15 +14,22 @@
     />
   </head>
   <body>
-    <h1>fred.h</h1>
+    <div id="topBanner">
+    <h1 id="bannerText">fred.h</h1>
+    </div>    
+    <div class="container" id="hl">
+
+    <div class="container">
     <p>
       Welcome to my header file, if you'll pardon the slightly forced anology.
       This is a simple page designed to expose what I'm up to and what I've done
       across a variety of areas, primarily software development but also writing
       and art.
     </p>
+    </div>
+    <div class="container">
     <h2>Quick Links</h2>
-    <p>GitHub Profile</p>
+    </div>
 
     <div class="container text-center">
       <div class="row">
@@ -70,50 +77,130 @@
       </div>
     </div>
 
+<div class="container">
 <h2>My CV</h2>
 
     <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        <div class="fAccordhead"><img src="mortarboard-fill.svg"> <div>2014 - 2017</div> <div><strong>University of Oxford</strong></div> </div>
+        <div class="fAccordhead"><img src="briefcase-fill.svg"> <div>Sep 2025 - Present </div> <div><strong>University of Bristol</strong></div><div>Computer Science Teaching Assistant</div> </div>
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        I studied Ancient and Modern History at Somerville College, Oxford.
-        <ul>
-          <li>Awarded an Exhibition for performance in first year examinations.</li>
-          <li> <strong>Thesis:</strong> ZYD
-        </ul>
+        After finishing my degree, I worked part-time to support the teaching of the Computer Science MSc course
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        Accordion Item #2
+        <div class="fAccordhead"><img src="mortarboard-fill.svg"> <div>Sep 2024 - Sep 2025</div> <div><strong>University of Bristol</strong></div><div>MSc Computer Science</div> </div>
       </button>
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the second item’s accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It’s also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        Units studied:
+        <ul>
+          <li>Introduction to Computer Architecture (boolean algrebra, building RAM/ALU/CPU, compilers, assembly)</li>
+          <li>Programming in C</li>
+          <li>Object-Orientated Programming (Java)</li>
+          <li>Software Tools (UNIX, Git, SQL, web development)</li>
+          <li>Software Engineering (Agile process, quantitive/qualiative evaluation - see group project repo <a href="https://github.com/UoB-COMSM0166/2025-group-28">here</a>)</li>
+          <li><strong>Final Project:</strong> Easel: An app designed to help protect artists from generative AI (see repo <a href="https://github.com/fred1778/Easel">here</a>)</li>
+
+        </ul>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        Accordion Item #3
+        <div class="fAccordhead"><img src="briefcase-fill.svg"> <div> Nov 2022 - May 2025</div> <div><strong>Accenture UKI</strong></div><div>Consultant (Technology for Financial Services)</div> </div>
       </button>
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the third item’s accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It’s also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+
+        <ul>
+Project experience in a business analysis capacity for an international investment bank:
+<li>detailed data dictionaries to inform data automation requirements in different business scenarios.</li>
+<li>Worked with bank business stakeholders across regions and the bank’s infrastructure
+development and solution architecture teams to help design automation solutions for account
+fulfilment.</li>
+<li>Provided training and oversight for new team members to enable them to perform system
+analysis for automation</li>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+   <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+        <div class="fAccordhead"><img src="briefcase-fill.svg"> <div>Sep 2018 - Sep 2022</div> <div><strong>KPMG UK</strong></div><div>Technology Consultant</div> </div>
+      </button>
+    </h2>
+    <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <i>Assistant Manager, October 2021 - September 2022</i> <br>
+                <i>Graduate Trainee, September 2018 - October 2021</i><br> <br>
+        Quality assurance for customer remediation solution for a large UK bank
+        <ul>
+          <li>Managed a team of software testers to deliver quality assurance for high-impact changes
+against challenging deadlines.</li>
+          <li>Worked in an Agile environment with product owners and developers to define and execute
+functional and non-functional test scopes for complex business logic.</li>
+        </ul>
+        Project manager for internal implementation of a contract automation tool:
+        <ul>
+          <li>Coordinated between software supplier, internal DevOps colleagues, and business SMEs to
+implement bespoke instance of the tool on internal infrastructure and automate complex deals
+advisory contracts.</li>
+<li>Worked with business users and risk management stakeholders to ensure contracts produced
+by the tool were accurate and developed learning materials to onboard users to platform.</li>
+<li>Managed the project planning and finances, and supported production of reporting materials for
+steering committees.</li>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+        <div class="fAccordhead"><img src="briefcase-fill.svg"> <div>Oct 2017 - May 2018</div> <div><strong>John Lewis and Partners</strong></div><div>Sales Partner</div> </div>
+      </button>
+    </h2>
+    <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+       Worked in the household electrical department, assisting customers to understand the product
+ranges, and processing purchases and returns.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+        <div class="fAccordhead"><img src="mortarboard-fill.svg"> <div>Oct 2014 - June 2017</div> <div><strong>University of Oxford</strong></div><div>BA Ancient and Modern History</div> </div>
+      </button>
+    </h2>
+    <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        Awarded academic exhibition for performance in first year examinations (2015) <br>
+    <strong>Thesis:</strong> <i>The Experience and Representation of Adolescence in Upper-Class English Society
+in the late eighteenth century</i>
+
+        </ul>
       </div>
     </div>
   </div>
 </div>
+</div>
+</div>    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
