--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body id="xr3">
     <div id="topBanner">
     <h1 id="bannerText">fred.h</h1>
     </div>    
     <div class="container" id="hl">
 
-    <div class="container">
     <p>
       Welcome to my header file, if you'll pardon the slightly forced anology.
       This is a simple page designed to expose what I'm up to and what I've done
       across a variety of areas, primarily software development but also writing
       and art.
     </p>
-    </div>
     <div class="container">
     <h2>Quick Links</h2>
     </div>
@@ -74,10 +72,7 @@
           </div>
         </div>
         </div>
-      </div>
-    </div>
 
-<div class="container">
 <h2>My CV</h2>
 
     <div class="accordion" id="accordionExample">
@@ -199,12 +194,14 @@ in the late eighteenth century</i>
     </div>
   </div>
 </div>
-</div>
-</div>    
+    </div>
+
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
   </body>
+
 </html>
