--- a/index.html
+++ b/index.html
@@ -18,62 +18,127 @@
     <h1 id="bannerText">fred.h</h1>
     </div>    
     <div class="container" id="hl">
-
+      <div class="container">
+        <h1>Welcome.</h1>
     <p>
-      Welcome to my header file, if you'll pardon the slightly forced anology.
-      This is a simple page designed to expose what I'm up to and what I've done
+      This is my header file, if you'll pardon the slightly forced anology. <br>
+      It's a simple page designed to expose what I'm up to and what I've done
       across a variety of areas, primarily software development but also writing
       and art.
+      <h4>About Me</h4>
+      <p>I'm Fred. I combine six years of strong commercial experience of digital transformation with software developmemt skills from both self-taught and academic experience. <br> Professionally, I have helped to deliver complex software platforms as part of large Agile teams for major banks, working closely with development teams and business stakeholders in areas such as software change governance, quality engineering, and analysis of complex legacy systems. I first started coding over a decade ago when I started to develop apps for iOS, and have published three on the App Store over the years. With an academic background in the humanties (my undergraduate degree is in Anceint and Modern History at the Univrsity of Oxford), I decided to explore my interest in computer science in an academic environment, and recently completed an MSc in Computer Science from the University of Bristol.  </p>
     </p>
+
+    <h2 class="sec">Highlights</h2>
+
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-theme ="dark">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="car">
+        <a href="https://github.com/fred1778/Easel">
+              <img src="Untitled-36.png"class="d-block w-100" alt="...">
+              </a>
+      </div>    </div>
+    <div class="carousel-item">
+      <div class="car">
+        <a href="https://github.com/fred1778/ArtOfWeather">
+              <img src="Untitled-37.png"class="d-block w-100" alt="...">
+              </a>      </div>    </div>
+    <div class="carousel-item">
+      <div class="car">
+        <h2>ABC</h2>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+
+
+
+<hr>
+
+
+  </div>
     <div class="container">
-    <h2>Quick Links</h2>
+    <h2 class="sec">Quick Links</h2>
     </div>
 
-    <div class="container text-center">
-      <div class="row">
-        <div class="col">
-          <div class="card" style="width: 19rem">
-            <img src="code2.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">GitHub Profile</h5>
-              <p class="card-text">
-                Explpore my projects, including archive of iOS app source code.
-              </p>
-              <a href="https://github.com/fred1778" class="btn btn-primary">Go!</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-                    <div class="card" style="width: 19rem">
-            <img src="wrds.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Medium Page</h5>
-              <p class="card-text">
-                Articles and stories
-              </p>
-              <a href="https://medium.com/@fredcgray" class="btn btn-primary">Go!</a>
-            </div>
-          </div>
-        </div>
+
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+          <div class="card">
+      <div class="card-body">
+       <img src="code-slash.svg" class="card-img-top" height="70"/>
+
+        <h5 class="card-title">Code</h5>
+        <p class="card-text">GitHub repositories for my projects.</p>
+        <a href="https://github.com/fred1778" class="btn btn-primary">Go</a>
+      </div>
+    </div>
+    </div>
+    <div class="col">
+          <div class="card">
+      <div class="card-body">
+               <img src="vector-pen.svg" class="card-img-top" height="70"/>
+
+        <h5 class="card-title">Writing</h5>
+        <p class="card-text">Articles and how-tos I've written on Medium.</p>
+        <a href="https://medium.com/@fredcgray" class="btn btn-primary">Go</a>
+      </div>
+    </div>
+    </div>
+    <div class="col">
+          <div class="card">
+      <div class="card-body">
+                       <img src="linkedin.svg" class="card-img-top" height="70"/>
+
+        <h5 class="card-title">LinkedIn</h5>
+        <p class="card-text">My LinkedIn profile</p>
+        <a href="https://www.linkedin.com/in/fred-clamp-gray-624987124/" class="btn btn-primary">Go</a>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
 
 
-        </div>
-        <div class="col">
 
-                    <div class="card" style="width: 15rem">
-            <img src="..." class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">GitHub Profile</h5>
-              <p class="card-text">
-                Explpore my projects, including archive of iOS app source code.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-        </div>
 
-<h2>My CV</h2>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<hr>
+
+
+
+<div class="container">          
+  <h2 class="sec">My CV</h2>
 
     <div class="accordion" id="accordionExample">
   <div class="accordion-item">
@@ -193,10 +258,15 @@ in the late eighteenth century</i>
       </div>
     </div>
   </div>
-</div>
     </div>
 
-    
+
+  <div class="container" id="foot">
+  </div>
+</div>
+
+
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
