--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
       across a variety of areas, primarily software development but also writing
       and art.
       <h4>About Me</h4>
-      <p>I'm Fred. I combine six years of strong commercial experience of digital transformation with software developmemt skills from both self-taught and academic experience. <br> Professionally, I have helped to deliver complex software platforms as part of large Agile teams for major banks, working closely with development teams and business stakeholders in areas such as software change governance, quality engineering, and analysis of complex legacy systems. I first started coding over a decade ago when I started to develop apps for iOS, and have published three on the App Store over the years. With an academic background in the humanties (my undergraduate degree is in Anceint and Modern History at the Univrsity of Oxford), I decided to explore my interest in computer science in an academic environment, and recently completed an MSc in Computer Science from the University of Bristol.  </p>
+      <p>I'm Fred. I combine six years of strong commercial experience of digital transformation with software developmemt skills from both self-taught and academic experience. <br> Professionally, I have helped to deliver complex software platforms as part of large Agile teams for major banks, working closely with development teams and business stakeholders in areas such as software change governance, quality engineering, and analysis of complex legacy systems. I first started coding over a decade ago when I started to develop apps for iOS, and have published three on the App Store over the years. With an academic background in the humanties (my undergraduate degree is in Anceint and Modern History at the Univrsity of Oxford), I decided to explore my interest in computer science in an academic environment, and recently completed an MSc in Computer Science from the University of Bristol.  <br> <br>
+      My experience centres around mobile development, especially for native iOS but also with Flutter. My primary skills include:<br>
+    <ul>
+      <li> <b>Swift</b> with experience building iOS apps in SwiftUI and UIKit </li> 
+     <li><b>Flutter</b> experience with using Dart language for building cross-platform apps.</li>
+     <li><b>C</b></li>
+      <li><b>Java</b></li>
+
+    </ul>
+    </p>
     </p>
 
     <h2 class="sec">Highlights</h2>
@@ -49,11 +58,7 @@
         <a href="https://github.com/fred1778/ArtOfWeather">
               <img src="Untitled-37.png"class="d-block w-100" alt="...">
               </a>      </div>    </div>
-    <div class="carousel-item">
-      <div class="car">
-        <h2>ABC</h2>
-      </div>
-    </div>
+
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
