additional comp data

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <div id="detail">
   <h2 id="dtl_title"></h2>
   <p id="space_info"></p>
+  <p id="pc"></p>
   <div id="avg1">
     <div class="cht"></div>
     <div class="cht"></div>
@@ -76,6 +77,8 @@
         <div class="cht"></div>
   </div>
   <p id="cht_st">12 hour history</p>
+     <p id="yday"></p>
+
 </div>
 
 
